--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 sudo: required
-dist: trusty
+dist: xenial
 before_install:
     - sudo apt-get -qq update
     - sudo apt-get install -y cabal-install
