--- a/rpm/assets/modules.yaml
+++ b/rpm/assets/modules.yaml
@@ -2,6 +2,98 @@
 document: modulemd
 version: 2
 data:
+  name: kangaroo
+  stream: 0
+  version: 20180730223407
+  context: deadbeef
+  arch: noarch
+  summary: Kangaroo 0.3 module
+  description: >-
+    A module for the kangaroo 0.3 package
+  license:
+    module:
+      - MIT
+  profiles:
+    default:
+      rpms:
+        - kangaroo
+  artifacts:
+    rpms:
+      - kangaroo-0:0.3-1.noarch
+...
+---
+document: modulemd
+version: 2
+data:
+  name: kangaroo
+  stream: 0
+  version: 20180704111719
+  context: deadbeef
+  arch: noarch
+  summary: Kangaroo 0.2 module
+  description: >-
+    A module for the kangaroo 0.2 package
+  license:
+    module:
+      - MIT
+  profiles:
+    default:
+      rpms:
+        - kangaroo
+  artifacts:
+    rpms:
+      - kangaroo-0:0.2-1.noarch
+...
+---
+document: modulemd
+version: 2
+data:
+  name: duck
+  stream: 0
+  version: 20180730233102
+  context: deadbeef
+  arch: noarch
+  summary: Duck 0.7 module
+  description: >-
+    A module for the duck 0.7 package
+  license:
+    module:
+      - MIT
+  profiles:
+    default:
+      rpms:
+        - duck
+  artifacts:
+    rpms:
+      - duck-0:0.7-1.noarch
+...
+---
+document: modulemd
+version: 2
+data:
+  name: duck
+  stream: 0
+  version: 20180704244205
+  context: deadbeef
+  arch: noarch
+  summary: Duck 0.6 module
+  description: >-
+    A module for the duck 0.6 package
+  license:
+    module:
+      - MIT
+  profiles:
+    default:
+      rpms:
+        - duck
+  artifacts:
+    rpms:
+      - duck-0:0.6-1.noarch
+...
+---
+document: modulemd
+version: 2
+data:
   name: walrus
   stream: 5.21
   version: 20180704144203
@@ -56,4 +148,22 @@ data:
   profiles:
     5.21: [default]
     0.71: [flipper]
+...
+---
+document: modulemd-defaults
+version: 1
+data:
+  module: duck
+  stream: 0
+  profiles:
+    0: [default]
+...
+---
+document: modulemd-defaults
+version: 1
+data:
+  module: kangaroo
+  stream: 0
+  profiles:
+    0: [default]
 ...
