--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,7 @@ before_install:
     - pip install --upgrade pip
     - pip install pylint
     - deactivate
-    - cabal update
-    - git clone https://github.com/koalaman/shellcheck.git
-    - cd shellcheck
-    - git checkout v0.4.4
-    - cabal install
-    - cd ..
-    - export PATH="$HOME/.cabal/bin:$PATH"
+    - sudo apt-get install -y shellcheck
     - which shellcheck
     - source ~/env/bin/activate
 script:
