Adding Dockerfile and quay deployment
ref #5913
https://pulp.plan.io/issues/5913

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,14 @@ before_install:
     - source ~/env/bin/activate
 script:
     make lint
+jobs:
+  include:
+    - stage: deploy
+      name: "Build pulp-fixtures docker image"
+      before_install: skip
+      script: docker build -t pulp/pulp-fixtures .
+      deploy:
+        provider: script
+        script: sudo .travis/quay-push.sh
+        on:
+          branch: master
