--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 sudo: required
 dist: xenial
+language: python
 # We lint with pylint before linting with shellcheck because the former step is
 # far faster than the latter step. The virtualenv is deactivated during all
 # shellcheck linting to avoid any possible environment-related errors.
 before_install:
-    - sudo apt-get -qq update
-    - sudo apt-get install -y cabal-install python3-venv
     - python3 -m venv ~/env
     - source ~/env/bin/activate
     - pip install --upgrade pip
@@ -21,9 +20,8 @@ jobs:
     - stage: deploy
       name: "Build pulp-fixtures docker image"
       before_install: skip
-      script: docker build -t pulp/pulp-fixtures .
+      script: docker build -t quay.io/pulp/pulp-fixtures .
+      if: type != pull_request AND branch = master
       deploy:
         provider: script
         script: bash .travis/quay-push.sh
-        on:
-          branch: master
