--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ jobs:
       name: "Build pulp-fixtures docker image"
       before_install: skip
       script:
-        - docker build -t quay.io/pulp/pulp-fixtures .
-        - docker run -d -p 8000:80 quay.io/pulp/pulp-fixtures
+        - docker build -t pulp/pulp-fixtures .
+        - docker run -d -p 8000:80 pulp/pulp-fixtures
         - curl --fail localhost:8000/fixtures/file/PULP_MANIFEST
         - curl --fail localhost:8000/fixtures/debian/dists/ragnarok/Release
       deploy:
