--- a/.travis.yml
+++ b/.travis.yml
@@ -21,12 +21,11 @@ jobs:
         - curl --fail localhost:8000/fixtures/file/PULP_MANIFEST
         - curl --fail localhost:8000/fixtures/debian/dists/ragnarok/Release
       deploy:
-        provider: script
-        script: bash .travis/docker-push.sh
-        on:
-          branch: master
-      deploy:
-        provider: script
-        script: bash .travis/quay-push.sh
-        on:
-          branch: master
+        - provider: script
+          script: bash .travis/docker-push.sh
+          on:
+            branch: master
+        - provider: script
+          script: bash .travis/quay-push.sh
+          on:
+            branch: master
