--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ jobs:
       script:
         - docker build -t pulp/pulp-fixtures .
         - docker run -d -p 8000:80 pulp/pulp-fixtures
-        - curl --fail localhost:8000/fixtures/file/PULP_MANIFEST
-        - curl --fail localhost:8000/fixtures/debian/dists/ragnarok/Release
+        - curl --fail localhost:8000/file/PULP_MANIFEST
+        - curl --fail localhost:8000/debian/dists/ragnarok/Release
       deploy:
         - provider: script
           script: bash .travis/docker-push.sh
