--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python: 3.7
 # shellcheck linting to avoid any possible environment-related errors.
 before_install:
     - pip install pylint
-    - sudo apt-get install -y shellcheck
+    - sudo apt-get install -y shellcheck libpod
 jobs:
   include:
     - stage: lint
@@ -16,8 +16,8 @@ jobs:
       name: "Build pulp-fixtures docker image"
       before_install: skip
       script:
-        - docker build -t pulp/pulp-fixtures .
-        - docker run -d -p 8000:80 pulp/pulp-fixtures
+        - buildah bud -f Containerfile -t pulp/pulp-fixtures .
+        - podman run -d -p 8000:80 pulp/pulp-fixtures
         - curl --fail localhost:8000/fixtures/file/PULP_MANIFEST
         - curl --fail localhost:8000/fixtures/debian/dists/ragnarok/Release
       deploy:
