--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,10 @@ jobs:
       before_install: skip
       script:
         - docker build -f Containerfile -t pulp/pulp-fixtures .
-        - docker run -d -p 8000:80 pulp/pulp-fixtures
+        - docker run -d -e BASE_URL=http://example.com -p 8000:80 pulp/pulp-fixtures
         - curl --fail localhost:8000/file/PULP_MANIFEST
         - curl --fail localhost:8000/debian/dists/ragnarok/Release
+        - [[ $(curl http://localhost:8000/rpm-mirrorlist-good) == "http://example.com/rpm-unsigned/" ]] || exit 1
       deploy:
         - provider: script
           script: bash .travis/docker-push.sh
