--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,9 @@ jobs:
         - sleep 2 # it can take a couple seconds for sed to run and nginx to boot
         - curl --fail localhost:8000/file/PULP_MANIFEST
         - curl --fail localhost:8000/debian/dists/ragnarok/Release
+        - curl -L localhost:8000/rpm-unsigned/?badtoken | grep "Wrong auth token"
+        - curl --fail -L localhost:8000/rpm-unsigned/?secret
+        - curl --fail -L localhost:8000/file-large/?parameter
         - '[[ $(curl localhost:8000/rpm-mirrorlist-good) == "http://example.com/rpm-unsigned/" ]] || exit 1'
       deploy:
         - provider: script
