Fixed content headers for PyPi json api pages

--- a/common/nginx.conf
+++ b/common/nginx.conf
@@ -47,7 +47,7 @@ http {
         location / {
             autoindex on;
             root   /usr/share/nginx/html;
-            index  index.html index.htm;
+            index  index.html index.htm index.json;
         }
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
