--- a/.github/workflows/pr_build_images.yaml
+++ b/.github/workflows/pr_build_images.yaml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
       - name: Install requirements
         run: |
           pip install pylint
@@ -17,4 +18,4 @@ jobs:
           .ci/build_image.sh
       - name: Display log on error
         if: failure()
-        run: docker logs pulp
+        run: docker logs pulp-fixtures
