--- a/.github/workflows/publish_images.yaml
+++ b/.github/workflows/publish_images.yaml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
       - name: Install requirements
         run: |
           pip install pylint
@@ -19,7 +20,7 @@ jobs:
           .ci/build_image.sh
       - name: Display log on error
         if: failure()
-        run: docker logs pulp
+        run: docker logs pulp-fixtures
       - name: Push image to registries
         env:
           DOCKER_BOT_PASSWORD: ${{ secrets.DOCKER_BOT_PASSWORD }}
