--- a/common/nginx.conf
+++ b/common/nginx.conf
@@ -3,8 +3,7 @@
 user  nginx;
 worker_processes  1;
 
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
+pid        /tmp/nginx.pid;
 
 events {
     worker_connections  1024;
@@ -18,7 +17,6 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log main;
 
     sendfile        on;
     keepalive_timeout  65;
@@ -29,7 +27,7 @@ http {
     }
 
     server {
-        listen       80;
+        listen       8080;
         server_name  localhost;
         absolute_redirect off;
 
