--- a/.github/workflows/publish_images.yaml
+++ b/.github/workflows/publish_images.yaml
@@ -9,11 +9,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v3
       - name: Install requirements
         run: |
-          pip install pylint
+          pip install --upgrade pylint setuptools
           sudo apt-get install -y shellcheck
       - name: Build & test the image
         run: |
