--- a/.github/workflows/pr_build_images.yaml
+++ b/.github/workflows/pr_build_images.yaml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/setup-python@v4
       - name: Install requirements
         run: |
-          pip install --upgrade pylint setuptools
+          pip install --upgrade pip pylint setuptools
           sudo apt-get install -y shellcheck
       - name: Build & test the image
         run: |
