--- a/.github/workflows/publish_images.yaml
+++ b/.github/workflows/publish_images.yaml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/setup-python@v3
       - name: Install requirements
         run: |
-          pip install --upgrade pylint setuptools
+          pip install --upgrade pip pylint setuptools
           sudo apt-get install -y shellcheck
       - name: Build & test the image
         run: |
