--- a/python/pypi-assets/projects.json
+++ b/python/pypi-assets/projects.json
@@ -9,6 +9,16 @@
       "aiohttp-3.3.2a0.tar.gz",
       "aiohttp-3.3.2.tar.gz"
     ],
+    "bcrypt": [
+      "bcrypt-4.0.1-cp36-abi3-macosx_10_10_universal2.whl",
+      "bcrypt-4.0.1-cp36-abi3-manylinux_2_28_x86_64.whl",
+      "bcrypt-4.0.1-cp36-abi3-musllinux_1_1_x86_64.whl",
+      "bcrypt-4.0.1-cp36-abi3-win_amd64.whl",
+      "bcrypt-4.0.1-pp37-pypy37_pp73-manylinux_2_28_x86_64.whl",
+      "bcrypt-4.0.1-pp38-pypy38_pp73-manylinux_2_28_x86_64.whl",
+      "bcrypt-4.0.1-pp39-pypy39_pp73-manylinux_2_28_x86_64.whl",
+      "bcrypt-4.0.1.tar.gz"
+    ],
     "celery": [
       "celery-2.4.1.tar.gz",
       "celery-3.1.9-py27-none-any.whl",
@@ -57,6 +67,14 @@
       "Django-2.1a1-py3-none-any.whl",
       "Django-2.1b1-py3-none-any.whl"
     ],
+    "pytz": [
+      "pytz-2023.2-py2.py3-none-any.whl",
+      "pytz-2023.2.tar.gz",
+      "pytz-2023.3-py2.py3-none-any.whl",
+      "pytz-2023.3.tar.gz",
+      "pytz-2023.3.post1-py2.py3-none-any.whl",
+      "pytz-2023.3.post1.tar.gz"
+    ],
     "scipy": [
       "scipy-1.1.0.tar.gz",
       "scipy-1.1.0-cp36-none-win_amd64.whl",
@@ -90,8 +108,10 @@
   },
   "latest_versions": {
     "aiohttp": "3.3.2",
+    "bcrypt": "4.0.1",
     "celery": "4.2.0",
     "Django": "2.0.6",
+    "pytz": "2023.3.post1",
     "scipy": "1.1.0",
     "shelf-reader": "0.1"
   }
